--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -3,5 +3,8 @@
     text-align: center;
     border-radius: 50px;
     font-size: 1.5em;
+    width: 75%;
+    margin-left: 175px;
+    font-weight: 800;
 }
 
